Add GoGame API and E2E testing setup with Nx. Introduced Express server for API, configured Jest for E2E tests, and updated package dependencies. Enhanced project structure with new TypeScript configurations and assets.

--- a/nx.json
+++ b/nx.json
@@ -67,12 +67,18 @@
       "plugin": "@nx/jest/plugin",
       "options": {
         "targetName": "test"
-      }
+      },
+      "exclude": ["go-game-api-e2e/**/*"]
     }
   ],
   "targetDefaults": {
     "test": {
       "dependsOn": ["^build"]
+    },
+    "@nx/esbuild:esbuild": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   },
   "generators": {
