--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "axios": "^1.6.0",
+    "express": "^4.21.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.29.0"
@@ -12,10 +14,12 @@
   "devDependencies": {
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "21.2.1",
+    "@nx/esbuild": "21.2.1",
     "@nx/eslint": "21.2.1",
     "@nx/eslint-plugin": "21.2.1",
     "@nx/jest": "21.2.1",
     "@nx/js": "21.2.1",
+    "@nx/node": "^21.2.1",
     "@nx/playwright": "21.2.1",
     "@nx/react": "21.2.1",
     "@nx/rspack": "21.2.1",
@@ -31,11 +35,13 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "babel-jest": "^29.7.0",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-import": "2.31.0",
@@ -57,6 +63,8 @@
     "typescript-eslint": "^8.29.0"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "go-game-api",
+    "go-game-api-e2e"
   ]
 }
