Enhance GoGame project structure by adding shared libraries and core game engine. Introduced TypeScript types, constants, and utility functions for game logic. Updated package configurations to include new libraries and improved workspace organization.

--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
   "workspaces": [
     "apps/*",
     "go-game-api",
-    "go-game-api-e2e"
+    "go-game-api-e2e",
+    "libs/*",
+    "libs/shared/*"
   ]
 }
