--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,36 @@
     },
     {
       "path": "./go-game-api"
+    },
+    {
+      "path": "./libs/shared"
+    },
+    {
+      "path": "./libs/shared"
+    },
+    {
+      "path": "./libs/shared"
+    },
+    {
+      "path": "./libs/shared"
+    },
+    {
+      "path": "./libs/shared"
+    },
+    {
+      "path": "./libs/shared"
+    },
+    {
+      "path": "./libs/shared/types"
+    },
+    {
+      "path": "./libs/shared/constants"
+    },
+    {
+      "path": "./libs/shared/utils"
+    },
+    {
+      "path": "./libs/game"
     }
   ]
 }
