Refactor GoGame project by cleaning up TypeScript configurations and enhancing game engine functionality. Removed redundant paths from tsconfig, added new game factory utilities for easier game creation, and introduced comprehensive documentation for the game engine. Updated project structure to improve organization and maintainability.

--- a/libs/game/tsconfig.json
+++ b/libs/game/tsconfig.json
@@ -4,6 +4,15 @@
   "include": [],
   "references": [
     {
+      "path": "../shared/utils"
+    },
+    {
+      "path": "../shared/constants"
+    },
+    {
+      "path": "../shared/types"
+    },
+    {
       "path": "./tsconfig.lib.json"
     }
   ]
