--- a/libs/game/tsconfig.lib.json
+++ b/libs/game/tsconfig.lib.json
@@ -12,5 +12,15 @@
     "types": ["node"]
   },
   "include": ["src/**/*.ts"],
-  "references": []
+  "references": [
+    {
+      "path": "../shared/utils/tsconfig.lib.json"
+    },
+    {
+      "path": "../shared/constants/tsconfig.lib.json"
+    },
+    {
+      "path": "../shared/types/tsconfig.lib.json"
+    }
+  ]
 }
