--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,27 +10,6 @@
       "path": "./apps/go-game"
     },
     {
-      "path": "./go-game-api-e2e"
-    },
-    {
-      "path": "./go-game-api"
-    },
-    {
-      "path": "./libs/shared"
-    },
-    {
-      "path": "./libs/shared"
-    },
-    {
-      "path": "./libs/shared"
-    },
-    {
-      "path": "./libs/shared"
-    },
-    {
-      "path": "./libs/shared"
-    },
-    {
       "path": "./libs/shared"
     },
     {
@@ -44,6 +23,9 @@
     },
     {
       "path": "./libs/game"
+    },
+    {
+      "path": "./apps/go-game-api"
     }
   ]
 }
