Implement GoGame UI components and theme system. Added interactive game board, game controls, and theme provider for customizable styling. Enhanced project structure with new libraries for game and UI, updated TypeScript configurations, and improved ESLint settings. Included comprehensive documentation and assets for better project presentation.

--- a/apps/go-game/tsconfig.json
+++ b/apps/go-game/tsconfig.json
@@ -3,6 +3,18 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/shared/types"
+    },
+    {
+      "path": "../../libs/shared/utils"
+    },
+    {
+      "path": "../../libs/game"
+    },
+    {
+      "path": "../../libs/ui"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
