--- a/package.json
+++ b/package.json
@@ -5,24 +5,39 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@mantine/core": "^8.1.2",
+    "@mantine/dates": "^8.1.2",
+    "@mantine/form": "^8.1.2",
+    "@mantine/hooks": "^8.1.2",
+    "@mantine/notifications": "^8.1.2",
+    "@tabler/icons-react": "^3.34.0",
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.6.0",
     "express": "^4.21.2",
+    "framer-motion": "^12.19.2",
+    "konva": "^9.3.20",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-konva": "^19.0.6",
     "react-router-dom": "6.29.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nx/devkit": "21.2.1",
     "@nx/esbuild": "21.2.1",
     "@nx/eslint": "21.2.1",
     "@nx/eslint-plugin": "21.2.1",
-    "@nx/jest": "21.2.1",
+    "@nx/jest": "^21.2.1",
     "@nx/js": "21.2.1",
     "@nx/node": "^21.2.1",
     "@nx/playwright": "21.2.1",
     "@nx/react": "21.2.1",
     "@nx/rspack": "21.2.1",
+    "@nx/vite": "21.2.1",
+    "@nx/web": "21.2.1",
     "@nx/workspace": "21.2.1",
     "@playwright/test": "^1.36.0",
     "@rspack/cli": "1.3.8",
@@ -36,10 +51,13 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^3.0.0",
+    "ajv": "^8.0.0",
     "babel-jest": "^29.7.0",
     "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
@@ -51,16 +69,22 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "21.2.1",
     "prettier": "^2.6.2",
     "react-refresh": "~0.14.0",
+    "sass": "^1.55.0",
     "sass-embedded": "^1.83.4",
     "sass-loader": "^16.0.4",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^3.0.0"
   },
   "workspaces": [
     "apps/*",
