--- a/package.json
+++ b/package.json
@@ -14,13 +14,22 @@
     "@tabler/icons-react": "^3.34.0",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
+    "express-session": "^1.18.2",
     "framer-motion": "^12.19.2",
+    "jsonwebtoken": "^9.0.2",
     "konva": "^9.3.20",
+    "mongoose": "^8.16.4",
+    "morgan": "^1.10.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-konva": "^19.0.6",
-    "react-router-dom": "6.29.0"
+    "react-router-dom": "6.29.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -50,8 +59,13 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
-    "@types/express": "^4.17.21",
+    "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
