Add multiplayer functionality to Go Game using PartyKit. Implemented room management, player roles, and real-time gameplay features. Enhanced UI with multiplayer options and integrated PartyKit for server communication. Updated documentation and added testing guidelines for multiplayer features.

--- a/apps/go-game-api-e2e/tsconfig.json
+++ b/apps/go-game-api-e2e/tsconfig.json
@@ -1,10 +1,12 @@
 {
-  "extends": "../tsconfig.base.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "out-tsc/@go-game/go-game-api-e2e",
     "esModuleInterop": true,
     "noUnusedLocals": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "declaration": true,
+    "composite": true
   },
   "include": ["jest.config.ts", "src/**/*.ts"],
   "references": []
