--- a/libs/game/tsconfig.lib.json
+++ b/libs/game/tsconfig.lib.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "types": [
       "node",
       "@nx/react/typings/cssmodule.d.ts",
@@ -34,6 +35,9 @@
     },
     {
       "path": "../shared/constants/tsconfig.lib.json"
+    },
+    {
+      "path": "../shared/partykit-protocol/tsconfig.lib.json"
     },
     {
       "path": "../shared/types/tsconfig.lib.json"
