--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@mantine/hooks": "^8.1.2",
     "@mantine/notifications": "^8.1.2",
     "@tabler/icons-react": "^3.34.0",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.6.0",
     "bcrypt": "^6.0.0",
@@ -20,16 +22,20 @@
     "express": "^4.21.2",
     "express-rate-limit": "^8.0.1",
     "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
     "framer-motion": "^12.19.2",
     "jsonwebtoken": "^9.0.2",
     "konva": "^9.3.20",
     "mongoose": "^8.16.4",
     "morgan": "^1.10.1",
+    "partykit": "^0.0.115",
+    "partysocket": "^1.1.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-konva": "^19.0.6",
     "react-router-dom": "6.29.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
