feat(tests): add comprehensive test utilities for Go game library
- Implemented test utilities in `test-utils.spec.ts` to verify board creation, move sequences, and position generation.
- Established a test setup in `test-setup.ts` to mock necessary browser APIs and components for testing.
- Created basic tests in `utils.test.ts` and `components.test.tsx` to ensure foundational functionality.
- Configured Vitest for the game, shared, and UI libraries with appropriate settings for testing and coverage reporting.
- Added mock implementations for WebSocket, localStorage, and other browser features to facilitate testing.

--- a/apps/go-game-api/package.json
+++ b/apps/go-game-api/package.json
@@ -60,6 +60,39 @@
             "buildTarget": "@go-game/go-game-api:build:production"
           }
         }
+      },
+      "vitest": {
+        "executor": "@nx/vite:test",
+        "outputs": [
+          "coverage/apps/go-game-api"
+        ],
+        "options": {
+          "configFile": "apps/go-game-api/vitest.config.ts",
+          "passWithNoTests": true
+        }
+      },
+      "vitest:run": {
+        "executor": "@nx/vite:test",
+        "outputs": [
+          "coverage/apps/go-game-api"
+        ],
+        "options": {
+          "configFile": "apps/go-game-api/vitest.config.ts",
+          "passWithNoTests": true,
+          "watch": false
+        }
+      },
+      "vitest:coverage": {
+        "executor": "@nx/vite:test",
+        "outputs": [
+          "coverage/apps/go-game-api"
+        ],
+        "options": {
+          "configFile": "apps/go-game-api/vitest.config.ts",
+          "passWithNoTests": true,
+          "watch": false,
+          "coverage": true
+        }
       }
     }
   }
