--- a/apps/go-game/tsconfig.app.json
+++ b/apps/go-game/tsconfig.app.json
@@ -23,6 +23,9 @@
     "src/**/*.test.js",
     "src/**/*.spec.jsx",
     "src/**/*.test.jsx",
+    "src/test-setup.ts",
+    "src/test-utils.tsx",
+    "vitest.config.ts",
     "jest.config.ts",
     "eslint.config.js",
     "eslint.config.cjs",
