--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
   "name": "@go-game/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:game": "vitest run --project=@go-game/game",
+    "test:shared": "vitest run --project=@go-game/shared",
+    "test:ui-lib": "vitest run --project=@go-game/ui",
+    "test:frontend": "vitest run --project=@go-game/go-game",
+    "test:api": "vitest run --project=@go-game/go-game-api",
+    "test:partykit": "vitest run --project=@go-game/go-game-partykit"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -64,7 +75,9 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "16.1.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
@@ -76,6 +89,7 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.0.0",
     "ajv": "^8.0.0",
     "babel-jest": "^29.7.0",
@@ -87,6 +101,7 @@
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "happy-dom": "^18.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jiti": "2.4.2",
