--- a/apps/go-game-api/tsconfig.app.json
+++ b/apps/go-game-api/tsconfig.app.json
@@ -9,7 +9,7 @@
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo"
   },
   "include": ["src/**/*.ts"],
-  "exclude": [],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts", "**/test-setup.ts", "vitest.config.ts"],
   "references": [
     {
       "path": "../../libs/shared/types/tsconfig.lib.json"
