--- a/apps/go-game-api/tsconfig.json
+++ b/apps/go-game-api/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "files": [],
   "include": ["src/**/*.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts", "**/test-setup.ts", "vitest.config.ts"],
   "references": [
     {
       "path": "../../libs/shared/types"
