--- a/libs/game/tsconfig.lib.json
+++ b/libs/game/tsconfig.lib.json
@@ -24,6 +24,9 @@
     "**/*.test.js",
     "**/*.spec.jsx",
     "**/*.test.jsx",
+    "**/test-utils/**",
+    "**/test-setup.ts",
+    "vitest.config.ts",
     "eslint.config.js",
     "eslint.config.cjs",
     "eslint.config.mjs"
