--- a/nx.json
+++ b/nx.json
@@ -82,6 +82,14 @@
         "buildDepsTargetName": "build-deps",
         "watchDepsTargetName": "watch-deps"
       }
+    },
+    {
+      "plugin": "@nx/vite/plugin",
+      "options": {
+        "testTargetName": "vitest",
+        "buildTargetName": "build-vite"
+      },
+      "include": ["**/vitest.config.{js,ts,mjs,mts}"]
     }
   ],
   "targetDefaults": {
